# VectoSys-Data-Pipeline

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pipline.py  pyproject.toml  requirements.txt
