[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectosys-data-pipeline"
version = "0.1.0"
description = "Enterprise-grade B2B SaaS data pipeline skeleton for VectoSys LLC."
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
